@@ -26,6 +26,7 @@
   to use the closure scope/environment of the specified &closure
 - added a &putAll(%hash, &/@, [&/@]) to populate the passed in hash from the
   passed in iterator(s).
+- readb now returns a $null if the read failed to return any data
 
 2.1-beta 7  (15 Oct 06)
 ===========
